disable csp header report for now - additional comments and notes on config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,7 @@
 # TODO implement WAF - ModSecurity with OWASP CRS see: https://github.com/SpiderLabs/ModSecurity-nginx and https://github.com/SpiderLabs/owasp-modsecurity-crs
 # TODO implement proxy_caching - https://docs.nginx.com/nginx/admin-guide/content-cache/content-caching/
 # TODO check header config for security - https://securityheaders.com/
+# TODO move settings that may vary per instance to included file for customization, readability, and more modular design
 
 ### Documentation: https://nginx.org/en/docs/ngx_core_module.html#worker_processes
 worker_processes 1; #Default value is "worker_processes 1;", but try auto or the to number of cpus to start
@@ -20,7 +21,7 @@ user nobody nogroup;
 
 pid /var/run/nginx.pid;
 
-### TODO uncomment to enable WAF ModSecurity ###
+### TODO uncomment to enable WAF ModSecurity - additional bulid probably needed ###
 # load_module modules/ngx_http_modsecurity_module.so;
 
 events {
@@ -219,11 +220,11 @@ http {
 
      ### Content Security Policy
      ### Reporting Only - TODO cleanup for modularity of domains and add as header in dev environment
-     add_header Content-Security-Policy-Report-Only "default-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; script-src-attr 'none'; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; style-src-elem 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com fonts.googleapis.com stackpath.bootstrapcdn.com; style-src-attr 'none'; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; block-all-mixed-content; sandbox; base-uri 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se";
+     # add_header Content-Security-Policy-Report-Only "default-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; script-src-attr 'none'; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; style-src-elem 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com fonts.googleapis.com stackpath.bootstrapcdn.com; style-src-attr 'none'; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; block-all-mixed-content; sandbox; base-uri 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se";
      ### Enforced Content Security Policy Values
      add_header Content-Security-Policy "upgrade-insecure-requests; default-src https testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com cdn.jsdelivr.net code.jquery.com; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; style-src-elem 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se cdn.jsdelivr.net code.jquery.com fonts.googleapis.com stackpath.bootstrapcdn.com";
 
-     ### Dev Default Behavior for referals
+     ### Dev Default Behavior for referrals
      ## TODO adding for now at server level, but will move to application level for finer level of control per content
      add_header Referrer-Policy "no-referrer-when-downgrade";
 
@@ -232,6 +233,7 @@ http {
 
      ##### END adding securityheaders ######
 
+     # TODO Faster Error Page delivery - consdier for offload from djangoapp
      #error_page 500 502 503 504 /500.html; # TODO create and add 500.html
      #location = /500.html {
      #}
