prep drop of nonvalid ssl hosts

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,6 +47,14 @@ http {
     ### if no Host match, close the connection to prevent host spoofing
     listen 80 default_server;
     listen [::]:80 default_server;
+
+    ### if no Host match on 443, close the connection to prevent host spoofing
+    #listen 443 default_server;
+    #listen [::]:443 default_server
+    #ssl on;
+    #ssl_certificate /path/to/certificate.crt; # TODO generate self signed certificate
+    #ssl_certificate_key /path/to/certificate.key;
+
     return 444; # don't return response for anything unless a valid host
     }
 
