remove temp certificates example as letsencrypt script generates automatically, but fails on acmev1 verification

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,19 +58,38 @@ http {
     return 444; # don't return response for anything unless a valid host
     }
 
+    ### Show ACMEv1 file before redirect
+    #server {
+    #  listen 80 default_server; # ipv4 listening acme-challenge request
+    #  listen [::]:80 default_server; # ipv6 listening acme-challenge request
+
+    #  server_name arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se;
+
+      ### set the .well-known location for letsencrypt ACME Challege file #TODO remove block and replace with ACMEv2 due to transition in 2021 - https://letsencrypt.org/docs/acme-protocol-updates/
+      ### BEGIN block to remove with finish of ACMEv2 ###
+      #location ~ /.well-known/acme-challege/ {
+      #  alias /var/www/certbot/.well-known/acme-challenge/;
+      #  #sendfile on;
+        #sendfile_max_chunk 1m;
+      #}
+      ### END block to remove with finish of ACMEv2 ###
+    #}
+
   ### Redirect all incoming http requests to the same site and URI on https, using nginx - .well-known allows lets-encrypt to verify via a generated file
   server {
-    listen 80 deferred; # ipv4 listening for upgrade to https redirect
-    listen [::]:80 deferred; # ipv6 listening for upgrade to https redirect
+    listen 80; # ipv4 listening for upgrade to https redirect
+    listen [::]:80; # ipv6 listening for upgrade to https redirect
 
     server_name arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se;
 
-    ### set the .well-known location for letsencrypt ACME Challege file
-    location = /.well-known/acme-challege {
-      alias /var/www/certbot;
-      #sendfile on;
-      #sendfile_max_chunk 1m;
-    }
+    ### set the .well-known location for letsencrypt ACME Challege file #TODO remove block and replace with ACMEv2 due to transition in 2021 - https://letsencrypt.org/docs/acme-protocol-updates/
+    ### BEGIN block to remove with finish of ACMEv2 ###
+    #location ~ /.well-known/acme-challege/ {
+    #  alias /var/www/certbot/.well-known/acme-challenge/;
+    #  #sendfile on;
+    #  #sendfile_max_chunk 1m;
+    #}
+    ### END block to remove with finish of ACMEv2 ###
 
     return 301 https://$host$request_uri;
   }
@@ -100,11 +119,11 @@ http {
      ##### END TODO Move to include #####
 
      ### BEGIN Dev-Test manual transitional certificates - TODO remove this block befor release ###
-     ssl_password_file /etc/letsencrypt/test.pass;
+     #ssl_password_file /etc/letsencrypt/test.pass;
      #ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/cert.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
      #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
-     ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/cert.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
-     ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/key.pem; # /path/to/private_key for alternative dev subdomain
+     ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
+     ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/privkey.pem; # /path/to/private_key for alternative dev subdomain
      ### END Dev-Test manual transitional certificates
 
      ssl_session_timeout 1d;
@@ -133,6 +152,13 @@ http {
 
      ### enable for letsencrypt wildcard deployment TODO DNS configuration needs to be implemented
      # include /etc/letsencrypt/options-ssl-nginx.conf; # TODO implement letsencrypt wildcard container
+
+     ### set the .well-known location for letsencrypt ACME Challege file #TODO remove block and replace with ACMEv2 due to transition in 2021 - https://letsencrypt.org/docs/acme-protocol-updates/
+     ### BEGIN block to remove with finish of ACMEv2 ###
+     location ~ /.well-known/acme-challege/ {
+       alias /var/www/certbot/.well-known/acme-challenge/;
+     }
+     ### END block to remove with finish of ACMEv2 ###
      ##### End SSL configuration #####
 
      ##### Begin application configuration #####
@@ -176,7 +202,7 @@ http {
      }
 
      ### set the .well-known location for static files
-     location = /.well-known {
+     location ~ /.well-known/ {
        alias /var/www/arcs_collected_static/static/.well-known/;
        #sendfile on;
        #sendfile_max_chunk 1m;
