--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,6 +48,8 @@ http {
     listen 80 default_server;
     listen [::]:80 default_server;
 
+    server_name _;
+
     ### if no Host match on 443, close the connection to prevent host spoofing
     #listen 443 default_server;
     #listen [::]:443 default_server
@@ -58,45 +60,39 @@ http {
     return 444; # don't return response for anything unless a valid host
     }
 
-    ### Show ACMEv1 file before redirect
-    #server {
-    #  listen 80 default_server; # ipv4 listening acme-challenge request
-    #  listen [::]:80 default_server; # ipv6 listening acme-challenge request
-
-    #  server_name arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se;
-
-      ### set the .well-known location for letsencrypt ACME Challege file #TODO remove block and replace with ACMEv2 due to transition in 2021 - https://letsencrypt.org/docs/acme-protocol-updates/
-      ### BEGIN block to remove with finish of ACMEv2 ###
-      #location ~ /.well-known/acme-challege/ {
-      #  alias /var/www/certbot/.well-known/acme-challenge/;
-      #  #sendfile on;
-        #sendfile_max_chunk 1m;
-      #}
-      ### END block to remove with finish of ACMEv2 ###
-    #}
-
   ### Redirect all incoming http requests to the same site and URI on https, using nginx - .well-known allows lets-encrypt to verify via a generated file
   server {
     listen 80; # ipv4 listening for upgrade to https redirect
     listen [::]:80; # ipv6 listening for upgrade to https redirect
+    root /var/www/;
 
-    server_name arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se;
+    server_name arcstest.brierjon.com
+                medborgarforskning.se
+                www.medborgarforskning.se
+                dev.medborgarforskning.se
+                ;
 
     ### set the .well-known location for letsencrypt ACME Challege file #TODO remove block and replace with ACMEv2 due to transition in 2021 - https://letsencrypt.org/docs/acme-protocol-updates/
     ### BEGIN block to remove with finish of ACMEv2 ###
-    #location ~ /.well-known/acme-challege/ {
-    #  alias /var/www/certbot/.well-known/acme-challenge/;
-    #  #sendfile on;
-    #  #sendfile_max_chunk 1m;
-    #}
+    location ^~ /.well-known/acme-challenge/ {
+      alias /var/www/certbot/.well-known/acme-challenge/;
+    }
     ### END block to remove with finish of ACMEv2 ###
 
-    return 301 https://$host$request_uri;
+    location / {
+      return 301 https://$host$request_uri;
+    }
   }
 
 
   ### Specific configuration of Nginx for serving the docker based ArcsSystem app
   server {
+     charset utf-8;
+     root /var/www/; #sets the root of your files on the server
+
+     ### max upload size
+     client_max_body_size 75M;   # adjust to taste
+
      ### set the level of error logging - [ debug | info | notice | warn | error | crit | alert | emerg]
      error_log  /var/log/nginx/error.log warn;
 
@@ -118,8 +114,7 @@ http {
      #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
      ##### END TODO Move to include #####
 
-     ### BEGIN Dev-Test manual transitional certificates - TODO remove this block befor release ###
-     #ssl_password_file /etc/letsencrypt/test.pass;
+     ### BEGIN Dev-Test manual transitional certificates - TODO remove this block before release ###
      #ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/cert.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
      #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
      ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
@@ -152,26 +147,16 @@ http {
 
      ### enable for letsencrypt wildcard deployment TODO DNS configuration needs to be implemented
      # include /etc/letsencrypt/options-ssl-nginx.conf; # TODO implement letsencrypt wildcard container
-
-     ### set the .well-known location for letsencrypt ACME Challege file #TODO remove block and replace with ACMEv2 due to transition in 2021 - https://letsencrypt.org/docs/acme-protocol-updates/
-     ### BEGIN block to remove with finish of ACMEv2 ###
-     location ~ /.well-known/acme-challege/ {
-       alias /var/www/certbot/.well-known/acme-challenge/;
-     }
-     ### END block to remove with finish of ACMEv2 ###
      ##### End SSL configuration #####
 
      ##### Begin application configuration #####
      ### set the valid host names that this server will handle (name1 name2 name3)
      ### Insert the naked domain name (ie. medborgarforskning.se), www subdomain (ie www.medborgarforskning.se), other subdomains. A wildcard is not supported with by ARCS automatic certificate generation at this time (ie *.medborgarforskning.se) due to DNS provider support being required and additional development needed. https://letsencrypt.org/docs/challenge-types/ # TODO verify all subdomains needed are listed.
-     server_name arcstest.brierjon.com medborgarforskning.se www.medborgarforskning.se dev.medborgarforskning.se;
-
-
-     charset utf-8;
-     root /var/www/arcs_collected_static/; #sets the root of your files on the server
-
-     ### max upload size
-     client_max_body_size 75M;   # adjust to taste
+     server_name arcstest.brierjon.com
+                 medborgarforskning.se
+                 www.medborgarforskning.se
+                 dev.medborgarforskning.se
+                 ;
 
      # deny scripts inside writable directories
      location ~* /(static|images|cache|media|logs|tmp)/.*.(php|pl|py|jsp|asp|sh|cgi)$ {
@@ -187,6 +172,14 @@ http {
        #  }
      #}
 
+     ### set the .well-known location for static files
+     location ^~ /.well-known/ {
+       alias /var/www/.well-known/;
+       autoindex on;
+       #sendfile on;
+       #sendfile_max_chunk 1m;
+     }
+
      ### set favicon location regardless if included in template
      location = /favicon.ico {
        alias /var/www/arcs_collected_static/static/favicon.ico;
@@ -199,13 +192,6 @@ http {
        alias /var/www/arcs_collected_static/static/robots.txt;
        sendfile on;
        sendfile_max_chunk 1m;
-     }
-
-     ### set the .well-known location for static files
-     location ~ /.well-known/ {
-       alias /var/www/arcs_collected_static/static/.well-known/;
-       #sendfile on;
-       #sendfile_max_chunk 1m;
      }
 
      ### set Nginx to handle the site design static files to offload from python app
