--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -13,6 +13,9 @@ RUN rm /etc/nginx/nginx.conf
 ### add the ARCS configured nginx.conf to the server image
 COPY nginx.conf /etc/nginx/
 
+### add .well-known static files to server
+#COPY ./.well-known/ /var/www/certbot/.well-known
+
 ### copy a custom mime.types file from ARCS to docker image
 #RUN rm /etc/nginx/mime.types
 #COPY conf/mime.types /etc/nginx/
