- fix path for serving .well-known static files

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -14,7 +14,7 @@ RUN rm /etc/nginx/nginx.conf
 COPY nginx.conf /etc/nginx/
 
 ### add .well-known static files to server
-#COPY ./.well-known/ /var/www/certbot/.well-known
+COPY ./.well-known/ /var/www/.well-known
 
 ### copy a custom mime.types file from ARCS to docker image
 #RUN rm /etc/nginx/mime.types
