- enable ocsp stapling for faster certificate verification - OCSP stapling certificate using full letsencrypt chain

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -72,12 +72,12 @@ http {
                 dev.medborgarforskning.se
                 ;
 
-    ### set the .well-known location for letsencrypt ACME Challege file #TODO remove block and replace with ACMEv2 due to transition in 2021 - https://letsencrypt.org/docs/acme-protocol-updates/
-    ### BEGIN block to remove with finish of ACMEv2 ###
+    ### BEGIN certbot LetsEncrypt block ###
+    ### set the .well-known location for letsencrypt ACME Challege file
     location ^~ /.well-known/acme-challenge/ {
       alias /var/www/certbot/.well-known/acme-challenge/;
     }
-    ### END block to remove with finish of ACMEv2 ###
+    ### END certbot LetsEncrypt block ###
 
     location / {
       return 301 https://$host$request_uri;
@@ -121,6 +121,14 @@ http {
      ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/privkey.pem; # /path/to/private_key for alternative dev subdomain
      ### END Dev-Test manual transitional certificates
 
+     ### OCSP stapling
+     ssl_stapling on;
+     ssl_stapling_verify on;
+
+     ### verify chain of trust of OCSP response using Root CA and Intermediate certs - with LetsEncrypt set to chain.pem
+     # ssl_trusted_certificate /path/to/root_CA_cert_plus_intermediates;
+     ssl_trusted_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem;
+
      ssl_session_timeout 1d;
      ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
      ssl_session_tickets off;
@@ -135,15 +143,8 @@ http {
      # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always; preload;
      add_header Strict-Transport-Security "max-age=30; includeSubDomains" always;
 
-     ### OCSP stapling
-     # ssl_stapling on;
-     # ssl_stapling_verify on;
-
-     ### verify chain of trust of OCSP response using Root CA and Intermediate certs
-     # ssl_trusted_certificate /path/to/root_CA_cert_plus_intermediates;
-
      ### replace with the IP address of your resolver ie the nameservers
-     resolver 127.0.0.1;
+     # resolver 127.0.0.1;
 
      ### enable for letsencrypt wildcard deployment TODO DNS configuration needs to be implemented
      # include /etc/letsencrypt/options-ssl-nginx.conf; # TODO implement letsencrypt wildcard container
