set HSTS header to 63072000 so https always used on return - preload not enabled by default, but subdomains are - assuming top level domain provided.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -141,7 +141,7 @@ http {
      ### HSTS (ngx_http_headers_module is required) (63072000 seconds is recommended for production)
      ## enable for inclusion of your domain in browsers to only use https - opt-in by enabling the preload version of the header below
      # add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always; preload;
-     add_header Strict-Transport-Security "max-age=30; includeSubDomains" always;
+     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
 
      ### replace with the IP address of your resolver ie the nameservers
      # resolver 127.0.0.1;
