fix file path in certificate for dev.medborgarforskning.se

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -115,7 +115,7 @@ http {
      ##### END TODO Move to include #####
 
      ### BEGIN Dev-Test manual transitional certificates - TODO remove this block before release ###
-     ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/cert.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
+     ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
      ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
      #ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
      #ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/privkey.pem; # /path/to/private_key for alternative dev subdomain
