- return to devtest domain - begin abstracting to variables - begin config of split to dev, testing, stangin, production

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -115,10 +115,10 @@ http {
      ##### END TODO Move to include #####
 
      ### BEGIN Dev-Test manual transitional certificates - TODO remove this block before release ###
-     ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
-     ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
-     #ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
-     #ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/privkey.pem; # /path/to/private_key for alternative dev subdomain
+     #ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
+     #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
+     ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
+     ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/privkey.pem; # /path/to/private_key for alternative dev subdomain
      ### END Dev-Test manual transitional certificates
 
      ### OCSP stapling
@@ -127,8 +127,8 @@ http {
 
      ### verify chain of trust of OCSP response using Root CA and Intermediate certs - with LetsEncrypt set to chain.pem
      # ssl_trusted_certificate /path/to/root_CA_cert_plus_intermediates;
-     ssl_trusted_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem;
-     #ssl_trusted_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem;
+     #ssl_trusted_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem;
+     ssl_trusted_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem;
 
      ssl_session_timeout 1d;
      ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
