save documentation notes

--- a/ArcsSystem.config
+++ b/ArcsSystem.config
@@ -10,13 +10,22 @@
 ########## BEGIN Required Config parameters ##########
 ##### HOST DOMAIN #####
 ### Set the domain which will host your site
-## Set the naked domain for production Example: medborgarforskning.se
+## Set the naked domain for production Example: medborgarforskning.example
 ## Automaticaly generates the required subdomains for hosting. If top level domain, sets redirect from www to naked domain.
-## Default: --throws error and prompts for domain---
-PRODDOMAIN = default
-TESTDOMAIN = default
-STAGINGDOMAIN = default
-DEVDOMAIN = default
+## Default: - no value - will --throw an error and prompt for domain---
+## DOMAIN =
+
+## Default URL pattern: https://medborgarforskning.example - and redirect from https://wwww.medborgarforskning.example
+PROD_DOMAIN = default
+
+## Default Staging URL pattern: https://staging.medborgarforskning.example
+STAGING_DOMAIN = default
+
+## Default testing URL pattern: https://medborgarforskning.example
+TESTING_DOMAIN = default
+
+## Default Dev URL pattern: https://medborgarforskning.example
+DEV_DOMAIN = default
 
 #### Set the admin email for the SSL Certifcates and other
 ## Default: admin@PRODDOMAIN
@@ -31,6 +40,11 @@ ADMINEMAIL = default
 POSTGRES_DB = default
 POSTGRES_USER = default
 POSTGRES_PASSWORD = default
+
+#### Set the domain used for emails from the platform ####
+## Default is the root doamin
+EMAILDOMAIN = default
+
 
 ########## END Required Config parameters ##########
 
