--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -22,7 +22,7 @@ user nobody nogroup;
 pid /var/run/nginx.pid;
 
 ### TODO uncomment to enable WAF ModSecurity - additional bulid probably needed ###
-# load_module modules/ngx_http_modsecurity_module.so;
+#load_module modules/ngx_http_modsecurity_module.so;
 
 events {
   worker_connections 1024; # increase if you have lots of clients
@@ -84,6 +84,19 @@ http {
     }
   }
 
+  #TODO finish config of expires header
+  map $sent_http_content_type $expires {
+    default         off;
+    application/pdf 1d;
+    ~image/         max;
+  }
+
+  #TODO finish config of cache-control header
+  map $sent_http_content_type $cacheable_types {
+    "text/css"    "max-age=864000";
+    "image/jpeg"  "max-age=864000";
+    default       "";
+    }
 
   ### Specific configuration of Nginx for serving the docker based ArcsSystem app
   server {
@@ -92,6 +105,9 @@ http {
 
      ### max upload size
      client_max_body_size 75M;   # adjust to taste
+
+     ### disable showing the server version number in response
+     server_tokens off;
 
      ### set the level of error logging - [ debug | info | notice | warn | error | crit | alert | emerg]
      error_log  /var/log/nginx/error.log warn;
@@ -105,30 +121,15 @@ http {
      listen 443 ssl;
      listen [::]:443 ssl;
 
-     ##### TODO Move to include and generate the include from ArcsSystem.config domains #####
-     #ssl_certificate     /etc/letsencrypt/live/medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for naked domain
-     #ssl_certificate_key /etc/letsencrypt/live/medborgarforskning.se/privkey.pem; # /path/to/private_key for naked domain
-     #ssl_certificate     /etc/letsencrypt/live/www.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for www subdomain
-     #ssl_certificate_key /etc/letsencrypt/live/www.medborgarforskning.se/privkey.pem; # /path/to/private_key for www subdomain
-     #ssl_certificate     /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
-     #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
-     ##### END TODO Move to include #####
-
-     ### BEGIN Dev-Test manual transitional certificates - TODO remove this block before release ###
-     #ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
-     #ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
-     ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
-     ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/privkey.pem; # /path/to/private_key for alternative dev subdomain
-     ### END Dev-Test manual transitional certificates
+     ### set paths to certificates for the domain(s) set
+     include certificatepaths.conf;
 
      ### OCSP stapling
      ssl_stapling on;
      ssl_stapling_verify on;
 
-     ### verify chain of trust of OCSP response using Root CA and Intermediate certs - with LetsEncrypt set to chain.pem
-     # ssl_trusted_certificate /path/to/root_CA_cert_plus_intermediates;
-     #ssl_trusted_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem;
-     ssl_trusted_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem;
+     ### set paths to certificates for the domain(s) set
+     include ocspcertificatepaths.conf;
 
      ssl_session_timeout 1d;
      ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
@@ -210,10 +211,6 @@ http {
        sendfile_max_chunk 1m;
      }
 
-     ### Setting the cache lengths
-     #location ~ \.(css)$ {
-     #}
-
      location / {
        ### checks for static file, if not found proxy to app
        try_files $uri @proxy_to_app;
@@ -254,6 +251,15 @@ http {
      add_header Feature-Policy "geolocation 'self'; midi 'none'; notifications 'none'; sync-xhr 'none'; push 'none'; microphone 'none'; camera 'none'; magnetometer 'none'; gyroscope 'none'; speaker 'none'; vibrate 'none'; fullscreen 'none'; payment 'none';";
 
      ##### END adding securityheaders ######
+
+     ##### BEGIN content cache control ######
+     ## set in map $expires above this server block
+     #expires $expires;
+     ### Setting the cache lengths for public files
+     #location ~ \.(css|js|txt)$ {
+     #add_header Pragma "public";
+     #}
+     ##### END content cache control ######
 
      # TODO Faster Error Page delivery - consdier for offload from djangoapp
      #error_page 500 502 503 504 /500.html; # TODO create and add 500.html
