- create LICENSE file - TBD contents - create docker-compose.override.yaml staging for environments - comments - start setting expires header and stage Cache-Control for static content - not finished yet

--- a/ArcsSystem.config
+++ b/ArcsSystem.config
@@ -8,7 +8,7 @@
 # The instal script will look for values where the value is not "default" or "1" and prompt for a value where required from install.sh.
 
 ########## BEGIN Required Config parameters ##########
-##### HOST DOMAIN #####
+##### HOST DOMAIN ##### # Note: current assumption is a single domain for the site
 ### Set the domain which will host your site
 ## Set the naked domain for production Example: medborgarforskning.example
 ## Automaticaly generates the required subdomains for hosting. If top level domain, sets redirect from www to naked domain.
