--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -84,17 +84,21 @@ http {
     }
   }
 
-  #TODO finish config of expires header
+  #TODO finish config of expires header for static content and extend for production
   map $sent_http_content_type $expires {
     default         off;
+    text/css        1d;
+    text/js         1d;
     application/pdf 1d;
     ~image/         max;
   }
 
-  #TODO finish config of cache-control header
+  #TODO finish config of cache-control header for static content and extend for production
   map $sent_http_content_type $cacheable_types {
-    "text/css"    "max-age=864000";
-    "image/jpeg"  "max-age=864000";
+    #"text/css"    "max-age=864000";
+    "text/css"    "max-age=300";
+    #"image/jpeg"  "max-age=864000";
+    "image/jpeg"  "max-age=300";
     default       "";
     }
 
@@ -252,12 +256,16 @@ http {
 
      ##### END adding securityheaders ######
 
-     ##### BEGIN content cache control ######
+     ##### BEGIN content cache control for static content ######
      ## set in map $expires above this server block
-     #expires $expires;
+     expires $expires;
      ### Setting the cache lengths for public files
-     #location ~ \.(css|js|txt)$ {
-     #add_header Pragma "public";
+     # TODO find out why this breaks serving the css and images
+     #location ~ \.(css|js)$ {
+      # add_header Cache-Control "public";
+     #}
+     #location ~ \.(jpg|webp)$ {
+      # add_header Cache-Control "public";
      #}
      ##### END content cache control ######
 
