--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -14,6 +14,7 @@ subdomains = "==3.0.1"
 wagtailmenus = "==3.0.1"
 psycopg2 = "==2.8.4"
 gunicorn = "==20.0.4"
+django-allauth = "==0.41.0"
 
 [requires]
 python_version = "3.7"
