--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -16,6 +16,8 @@ psycopg2 = "==2.8.5"
 gunicorn = "==20.0.4"
 django-summernote = "*"
 django-allauth = "==0.41.0"
+taggit = "*"
+django-taggit = "*"
 
 [requires]
 python_version = "3.7"
